--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>CV of MD. Golam Mostofa</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+</head>
+<body style="background-color:#eeeeee; font-family: sans-serif;">	
+    <div style="height: 300px; width:auto; padding: 10px; align-content: left">
+        	<div style="height: 150px; width: 130px;"><img src="my pic.jpg" height="145" width="120"></div>
+            <div><h2>MD. Golam Mostofa</h2>
+            <p>Lecturer of ICT<br>Rajshahi Cantonment Board School and College</p></div>
+        </div>        
+        <section class="contact-info">
+            <h2>Contact Information</h2>
+            <ul><li>
+            	<address>
+            	169/J, Kadirgonj, 
+            	Boalia, Rajshahi-6000 
+            </address></li>
+                <li>Email: <a href="mailto:mostofa.tee45@gmail.com">mostofa.tee45@gmail.com</a></li>
+                <li>Phone: +8801737504031</li>
+            </ul>
+        </section>
+
+        <section class="career-objective">
+            <h2>Career Objective</h2>
+            <p>
+                I am, a symbol of energetic, proactive and hardworking personnel, like to serve in a responsible challenging position at well-structured organization and successfully apply acquired managerial, analytical, organizational and interpersonal skills to enhance organizational efficiencies with respect and values of diversities having desire to break the resist in innovative ways with winning spirits, ethical standards and moral principles. 
+            </p>
+        </section>
+
+        <section class="education">
+            <h2>Education</h2>
+            <ul>
+                <li><strong>B.Sc. in Telecommunication and Electronic Engineering</strong><br>Hajee Mohammad Danesh Science and Technology University  | Year: 2013</li>
+             
+            </ul>
+        </section>
+
+        <section class="professional-experience">
+            <h3>Professional Experience</h3>
+            <div class="experience-item">
+                <h3>Lecturer of ICT</h3>
+                <p><strong>Rajshahi Cantonment Board School and College</strong> | Year: 2018 – Present</p>
+                <ul>
+                    <li>Guide the department and student </li>
+                    <li>Develop and update course materials, assignments, and assessments.</li>
+                    <li>Facilitate practical sessions on ICT tools and technologies.</li>
+                    <li>Performing ICT Multimedia Class, providing exam question and solution</li>
+                    <li>Organizing seminar, extra curriculum activities</li>
+                    <li>Performing duties deployed by authoritie</li>
+                </ul>
+            </div>
+            <div class="experience-item">
+                <h3>Former Lecturer of ICT</h3>
+                <p><strong>DR. Mahbubur Rahman Molla College</strong> | Year: 2017 – 2018</p>
+                <p><strong>Mollakandi Lalmia Pilot High School and College</strong> | Year: 2014 – 2016</p>
+                </ul>
+            </div>
+        </section>
+
+        <section class="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Programming Languages: C, C++, C#, JAVA and PHP</li>
+                <li>Database Management: SQL, MySQL</li>
+                <li>Lesson Planning and Curriculum Development</li>
+                <li>Problem Solving and Critical Thinking</li>
+            </ul>
+        </section>
+        <section class="references">
+            <h2>References</h2>
+            <ul>
+                <li>Professor Dr. MD. Mahabub Hossain 
+Department of TEE,
+Hajee Mohammad Danesh Science and Technology University, Dinajpur, Bangladesh.
+Contact Number: +880-1720557161
+Email: mahmbub@hstu.ac.bd
+</li>
+                <li>Md. Mehedi Hasan
+Professor,
+Department of TEE,
+Hajee Mohammad Danesh Science and Technology University, Dinajpur, Bangladesh.
+Contact Number: +880-171-6239606
+Email: mehedi@hstu.ac.bd
+</li>
+            </ul>
+        </section>
+
+        <footer>
+            <p>&copy; 2024 MD. Golam Mostofa</p>
+        </footer>
+    </div>
+</body>
+</html>
+
