--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#about">About Me</a>
+                        <a class="nav-link active" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#education">Education</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#experience">Experience</a>
@@ -49,7 +52,7 @@
                 <div class="col-md-8">
                     <!-- Main Hero Content -->
                     <h1 class="display-4">Md. Golam Mostofa</h1>
-                    <p class="lead">Lecturer of ICT | 10+ Years of Experience | Technology Enthusiast</p>
+                    <p class="lead">Lecturer of ICT | 10+ Years of Experience | Technology Enthusiast<br><b>+8801737504031 &nbsp mostofa.tee45@gmail.com</b></p>
                     <a href="#contact" class="btn btn-primary">Get in Touch</a>
                 </div>
 
