--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
+                    
                     <!-- Main Hero Content -->
-                    <h1 style="color:black;">Md. Golam Mostofa</h1>
-                    <p style="color:black; size=12;">Lecturer of ICT | 10+ Years of Experience | Technology Enthusiast<br><b>+8801737504031 &nbsp mostofa.tee45@gmail.com</b></p>
+                    <h1 class="display-4">Md. Golam Mostofa</h1>
+                    <p class="lead">Lecturer of ICT | 10+ Years of Experience | Technology Enthusiast<br><b>+8801737504031 &nbsp mostofa.tee45@gmail.com</b></p>
                     <a href="#contact" class="btn btn-primary">Get in Touch</a>
                 </div>
-
                 <!-- Weather Section -->
                 <div class="col-md-4">
                     <div class="card weather-card">
